--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sequelize": "6.37.5",
+    "sequelize-cli": "6.6.2",
+    "sqlite3": "5.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
